--- a/parking/templates/_partials/_sidebar.html
+++ b/parking/templates/_partials/_sidebar.html
@@ -5,19 +5,19 @@
     <li class="nav-item mb-2 " id="nav-item">
       <div class="item-list">
         <i class="bi bi-file-bar-graph"></i>
-        <a class="nav-link text-white" href="{% url 'pages/home.html' %}">Home</a>
+        <a class="nav-link text-white" href="{% url 'home' %}">Home</a>
       </div>
     </li>
     <li class="nav-item mb-2  ">
       <div class="item-list">
         <i class="bi bi-card-text"></i>
-        <a class="nav-link text-white" href="{% url 'pages/veiculos.html' %}">Veículos</a>
+        <a class="nav-link text-white" href="">Veículos</a>
       </div>
     </li>
     <li class="nav-item mb-2 ">
       <div class="item-list">
         <i class="bi bi-bell"></i>
-        <a class="nav-link text-white" href="{% url 'pages/vagas.html' %}">Vagas</a>
+        <a class="nav-link text-white" href="{% url 'vagas' %}">Vagas</a>
       </div>
     </li>
     
