--- a/parking/templates/_partials/_sidebar.html
+++ b/parking/templates/_partials/_sidebar.html
@@ -3,27 +3,27 @@
 <aside class="bg-navbar text-white vh-100 p-4 border-none sidebar" width="300px">
   <ul class="nav flex-column">
     <li class="nav-item mb-2 " id="nav-item">
-      <div class="item-list">
-        <i class="bi bi-file-bar-graph"></i>
+      <div class="item-list d-flex align-items-center">
+        <i class="bi bi-house-door"></i>
         <a class="nav-link text-white" href="{% url 'home' %}">Home</a>
       </div>
     </li>
     <li class="nav-item mb-2  ">
-      <div class="item-list">
-        <i class="bi bi-card-text"></i>
+      <div class="item-list d-flex align-items-center">
+        <i class="bi bi-car-front"></i>
         <a class="nav-link text-white" href="">Veículos</a>
       </div>
     </li>
     <li class="nav-item mb-2 ">
-      <div class="item-list">
-        <i class="bi bi-bell"></i>
+      <div class="item-list d-flex align-items-center">
+        <i class="bi bi-p-circle"></i>
         <a class="nav-link text-white" href="{% url 'vagas' %}">Vagas</a>
       </div>
     </li>
     
     
     <li class="nav-item">
-      <div class="item-list">
+      <div class="item-list d-flex align-items-center">
         <i class="bi bi-box-arrow-left"></i>
         <a class="nav-link text-white" href="#">Sair</a>
       </div>
