--- a/parking/templates/_partials/_sidebar.html
+++ b/parking/templates/_partials/_sidebar.html
@@ -11,7 +11,7 @@
     <li class="nav-item mb-2  ">
       <div class="item-list d-flex align-items-center">
         <i class="bi bi-car-front"></i>
-        <a class="nav-link text-white" href="">Veículos</a>
+        <a class="nav-link text-white" href="{% url 'veiculos' %}">Veículos</a>
       </div>
     </li>
     <li class="nav-item mb-2 ">
