--- a/parking/templates/index.html
+++ b/parking/templates/index.html
@@ -1,3 +1,5 @@
 <html>
   <a href="{% url 'home' %}">home</a>
+  <a href="{% url 'login' %}">login</a>
+  <a href="{% url 'cadastro' %}">cadastro</a>
 </html>
