--- a/parking/templates/auth/cadastro.html
+++ b/parking/templates/auth/cadastro.html
@@ -1,5 +1,85 @@
 {% extends '../layout/layout-form.html' %}
-{% block title %}Cadastro - Tech parking{% endblock %}
+{% block title %}
+  Cadastro - Tech parking
+{% endblock %}
+{% load static %}
 {% block content %}
+  <section class="container-fluid vh-100">
+    <div class="row">
+      <div class="col-5 d-flex flex-column justify-content-center align-items-center vh-100" style="background-color: #072e33;">
+        <div class="text">
+          <h2 class="text-white fw-bold">Tech Parking</h2>
+          <p class="text-white fw-ligth">Estacione com Inteligência, Conecte-se com Facilidade.</p>
+        </div>
+        <div class="">
+          <img src="{% static 'img/car.png' %}" style="width: 100%;" alt="" />
+        </div>
 
+        <div>
+          <p class="text-white fw-ligth">Já tem conta? Faça login para continuar.</p>
+          <a href="{% url 'login' %}"><button type="submit" class="btn p-2 fw-bold" style="width: 100%; background-color: #fff;">Login</button></a>
+        </div>
+      </div>
+
+      <div class="col-7 d-flex flex-column justify-content-center align-items-center vh-100">
+        <h3 class="fw-bold" style="color: #072e33;">Bem vindo ao Tech Parking</h3>
+        <h4 class="mb-2">Cadastre-se para continuar</h4>
+
+        <form class="mt-4" method="post">
+          {% csrf_token %}
+
+          <div class="mb-3">
+            <label for="id_nome" class="form-label">Nome completo</label>
+            {{ form.nome }} 
+            <div id="namelHelp" class="form-text">Digite o nome sem abreviações.</div>
+          </div>
+
+          <div class="row">
+            <div class="mb-3 col-6">
+              <label for="id_telefone" class="form-label">Telefone</label>
+              {{ form.telefone }}
+            </div>
+            <div class="mb-3 col-6">
+              <label for="id_cpf" class="form-label">CPF</label>
+              {{ form.cpf }}
+            </div>
+          </div>
+
+          <div class="mb-3 form-floating">
+            <label for="id_tipo_prop">Tipo de cadastro</label>
+            {{ form.tipo_prop }}
+          </div>
+
+          <div class="mb-3">
+            <label for="id_email" class="form-label">Email</label>
+            {{ form.email }}
+            <div id="emailHelp" class="form-text">Nunca compartilharemos seu e-mail com mais ninguém.</div>
+          </div>
+
+          <div class="row">
+            <div class="mb-3 col-6">
+              <label for="id_senha" class="form-label">Senha</label>
+              {{ form.senha }}
+            </div>
+            <div class="mb-3 col-6">
+              <label for="id_confirmar_senha" class="form-label">Confirmar senha</label>
+              {{ form.confirmar_senha }}
+            </div>
+          </div>
+
+          {% if messages %}
+            <ul>
+              {% for message in messages %}
+                <li>{{ message }}</li>
+              {% endfor %}
+            </ul>
+          {% endif %}
+
+          <div class="bg-button mt-4">
+            <button type="submit" class="btn fw-bold p-2" style="width: 100%;">Cadastrar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </section>
 {% endblock %}
