--- a/parking/templates/layout/layout-form.html
+++ b/parking/templates/layout/layout-form.html
@@ -17,8 +17,11 @@
       {% endblock %}
     </title>
   </head>
+
   <body>
-    
+    <main>
+        {% block content %} {% endblock %}
+    </main>
   </body>
   
 </html>
