--- a/parking/static/css/style.css
+++ b/parking/static/css/style.css
@@ -2,6 +2,15 @@
 .bg-section{
   background-color: #ececec;
 }
+.bg-form{
+  background: linear-gradient( #072E33, #cef9f6 ) no-repeat;
+}
+
+.bg-button button{
+  background-color: #072E33;
+  color: white;
+}
+
 
 .border-radius{
   border-radius: 20px;
