--- a/parking/templates/_partials/_sidebar.html
+++ b/parking/templates/_partials/_sidebar.html
@@ -25,7 +25,7 @@
     <li class="nav-item">
       <div class="item-list d-flex align-items-center">
         <i class="bi bi-box-arrow-left"></i>
-        <a class="nav-link text-white" href="#">Sair</a>
+        <a class="nav-link text-white" href="{% url 'logout' %}">Sair</a>
       </div>
     </li>
   </ul>
