--- a/parking/templates/_partials/_navbar.html
+++ b/parking/templates/_partials/_navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<nav class="navbar bg-navbar" style="background-color: #072E33;">
+<nav class="navbar bg-navbar">
   <div class="container-fluid">
     <a class="navbar-brand text-white">Tech Parking</a>
     <div class="d-flex align-items-center">
