--- a/parking/templates/auth/login.html
+++ b/parking/templates/auth/login.html
@@ -17,7 +17,7 @@
         </div>
 
         <div>
-          <p class="text-white fw-ligth">Não tem conta?</p>
+          <p class="text-white fw-ligth">Não tem conta? Cadastre-se para continuar.</p>
           <a href="{% url 'cadastro' %}"><button type="submit" class="btn p-2 fw-bold" style="width: 100%; background-color: #fff;">Cadastre-se</button></a>
         </div>
       </div>
