--- a/parking/templates/pages/home.html
+++ b/parking/templates/pages/home.html
@@ -8,7 +8,7 @@
       <div class=" col-6 user">
         <div class="">
           {% if user.is_authenticated %}
-          <p>Bem-vindo, {{ user.first_name }}!</p>
+          <p>Olá, {{ user.first_name }}!</p>
           {% endif %}
         </div>
       </div>
