--- a/parking/templates/pages/veiculos.html
+++ b/parking/templates/pages/veiculos.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   <section class="container-fluid d-flex gap-2 auto p-3">
-    <div class="formulario bg-section col-8 p-3 me-3 border-radius">
+    <div class="formulario col-8 p-3 me-3 border-radius" style="background-color: whitesmoke;">
       <h3 class="">Cadastrar novo veículo</h3>
       <form>
         <div class="mb-3">
@@ -22,7 +22,7 @@
       </form>
     </div>
 
-    <div class="lista-veiculos col-4 bg-section p-3 border-radius">
+    <div class="lista-veiculos col-4 p-3 border-radius" style="background-color: whitesmoke;">
       <h3 class="">Meus veículos</h3>
       <ul>
         <li>veiculo 1</li>
