--- a/parking/templates/index.html
+++ b/parking/templates/index.html
@@ -3,13 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/reset.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/index.css' %}" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <script src="https://kit.fontawesome.com/7a2b9d2cd6.js" crossorigin="anonymous"></script>
 
     <link rel="icon" href="{% static 'img/icon.png' %}" />
     {% load bootstrap5 %}
@@ -36,7 +29,7 @@
           <div class="row">
             <div class="col-md-6 col-sm-12 d-flex justify-content-center flex-column">
               <h1 class="text-white">Seu carro seguro, sua tranquilidade garantida!</h1>
-              <p class="text-white fw-light">Tech Parking: mais que um estacionamento, uma experiência segura!</p>
+              <p class="text-white fw-light">Mais que um estacionamento, uma experiência!</p>
               <a href="{% url 'cadastro' %}" class="rounded" style="background-color: white; max-width: 100px;"><button class="btn" style="color: #072e33;">Cadastrar</button></a>
             </div>
 
