--- a/parking/templates/_partials/_sidebar.html
+++ b/parking/templates/_partials/_sidebar.html
@@ -1,6 +1,6 @@
 {% load static %}
 
-<aside class="bg-navbar text-white vh-100 p-4 border-none sidebar" width="300px">
+<aside class="text-white vh-100 p-4 border-none sidebar" width="300px" style="background-color: #072e33;">
   <ul class="nav flex-column">
     <li class="nav-item mb-2 " id="nav-item">
       <div class="item-list d-flex align-items-center">
