--- a/parking/templates/auth/cadastro.html
+++ b/parking/templates/auth/cadastro.html
@@ -62,7 +62,7 @@
               <input type="password" class="form-control" name="confirm_password" required/>
             </div>
           </div>
-          <div id="emailHelp" class="form-text mt-0">A senha precisa ter no mínimo 6 caracters</div>
+          <div id="emailHelp" class="form-text mt-0 mb-2">A senha precisa ter no mínimo 6 caracters</div>
           {% if messages %}
             <div class="alert alert-danger">
               {% for message in messages %}
