--- a/parking/templates/auth/cadastro.html
+++ b/parking/templates/auth/cadastro.html
@@ -71,7 +71,7 @@
             </div>
           {% endif %}
           <div class="bg-button mt-4">
-            <button type="submit" class="btn fw-bold p-2" style="width: 100%;">Cadastrar</button>
+            <button type="submit" class="btn fw-bold p-2 text-white" style="width: 100%; background-color: #072e33;">Cadastrar</button>
           </div>
           
         </form>
