--- a/parking/templates/auth/login.html
+++ b/parking/templates/auth/login.html
@@ -47,7 +47,7 @@
           {% endif %}
 
           <div class="bg-button mt-4">
-            <button type="submit" class="btn fw-bold p-2" style="width: 100%;">Login</button>
+            <button type="submit" class="btn fw-bold p-2 text-white" style="width: 100%; background-color: #072e33;">Login</button>
           </div>
         </form>
       </div>
