--- a/parking/templates/pages/vagas.html
+++ b/parking/templates/pages/vagas.html
@@ -1,6 +1,7 @@
 {% extends '../layout/layout.html' %}
-{% block title %}Vagas{% endblock %}
+{% block title %}
+  Vagas
+{% endblock %}
 {% block content %}
-
   <h1>Vagas</h1>
 {% endblock %}
