--- a/parking/templates/layout/layout-form.html
+++ b/parking/templates/layout/layout-form.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{% static 'img/icon.png' %}">
+    <link rel="icon" href="{% static 'img/icon.png' %}" />
     <link rel="stylesheet" href="{% static 'css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://kit.fontawesome.com/7a2b9d2cd6.js" crossorigin="anonymous"></script>
     {% load bootstrap5 %}
     {% bootstrap_css %}
     {% bootstrap_javascript %}
     <title>
       {% block title %}
+
       {% endblock %}
     </title>
   </head>
 
   <body>
     <main>
-        {% block content %} {% endblock %}
+      {% block content %}
+
+      {% endblock %}
     </main>
   </body>
-  
 </html>
