--- a/parking/templates/layout/layout.html
+++ b/parking/templates/layout/layout.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="{% static 'img/icon.png' %}">
+    <link rel="icon" href="{% static 'img/icon.png' %}" />
     <link rel="stylesheet" href="{% static 'css/reset.css' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'css/navbar-style.css' %}" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
     <script src="https://kit.fontawesome.com/7a2b9d2cd6.js" crossorigin="anonymous"></script>
 
     {% load bootstrap5 %}
@@ -15,12 +15,13 @@
     {% bootstrap_javascript %}
     <title>
       {% block title %}
+
       {% endblock %}
     </title>
   </head>
   <header>
     {% block navbar %}
-    {% include '../_partials/_navbar.html' %}
+      {% include '../_partials/_navbar.html' %}
     {% endblock %}
   </header>
   <body>
@@ -30,13 +31,15 @@
       {% endblock %}
 
       <main class="flex-fill p-3">
-        {% block content %} {% endblock %}
+        {% block content %}
+
+        {% endblock %}
       </main>
     </div>
   </body>
   <footer>
     {% block footer %}
-        {% include '../_partials/_footer.html' %}
-      {% endblock %}
+      {% include '../_partials/_footer.html' %}
+    {% endblock %}
   </footer>
 </html>
