--- a/parking/templates/pages/veiculos.html
+++ b/parking/templates/pages/veiculos.html
@@ -32,6 +32,7 @@
             <th>Placa</th>
             <th>Modelo</th>
             <th>Cor</th>
+            <th>Proprietário</th>
           </tr>
         </thead>
         <tbody>
@@ -40,6 +41,7 @@
             <td>{{ veiculo.placa }}</td>
             <td>{{ veiculo.modelo }}</td>
             <td>{{ veiculo.cor }}</td>
+            <td>{{ veiculo.proprietario.first_name }}</td>
           </tr>
           {% endfor %}
         </tbody>
