add sensor arduino

--- a/parking/templates/pages/vagas.html
+++ b/parking/templates/pages/vagas.html
@@ -1,27 +1,28 @@
 {% extends '../layout/layout.html' %}
+
 {% block title %}
   Vagas
 {% endblock %}
+
 {% block content %}
   <h1>Vagas</h1>
 
+  <!-- Atualiza a página inteira a cada 10 segundos -->
+  <meta http-equiv="refresh" content="5">
+
   <div class="d-flex flex-wrap gap-3">
     {% for vaga in vagas %}
-    <div class="p-3 vaga {% if vaga.ocupada %}
-        ocupada
-      {% else %}
-        disponivel
-      {% endif %}">
-      <h2>{{ vaga.codigo_vaga }}</h2>
-      <p>{{ vaga.tipo_vaga }}</p>
-      <p>
-        {% if vaga.ocupada %}
-          Ocupada
-        {% else %}
-          Disponível
-        {% endif %}
-      </p>
-    </div>
+      <div class="p-3 vaga {% if vaga.ocupada %}ocupada{% else %}disponivel{% endif %}">
+        <h2>{{ vaga.codigo_vaga }}</h2>
+        <p>{{ vaga.tipo_vaga }}</p>
+        <p>
+          {% if vaga.ocupada %}
+            <span style="color: red;">🔴 Ocupada</span>
+          {% else %}
+            <span style="color: green;">🟢 Disponível</span>
+          {% endif %}
+        </p>
+      </div>
     {% endfor %}
   </div>
 {% endblock %}
