--- a/parking/static/css/style.css
+++ b/parking/static/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
+body {
+  font-family:  "Inter", serif;
+}
+
 .vaga {
   border: 1px solid #ccc;
   margin: 10px 0;
