--- a/parking/templates/_partials/_navbar.html
+++ b/parking/templates/_partials/_navbar.html
@@ -5,7 +5,7 @@
     <a class="navbar-brand text-white">Tech Parking</a>
     <div class="d-flex align-items-center">
       <a href=""><i class="text-white fa-solid fa-user-large"></i></a>
-      <a class="nav-link text-white" href="">Perfil</a>
+      <a class="nav-link text-white" href="{% url 'perfil' %}">Perfil</a>
     </div> 
   </div>
 </nav>
