--- a/parking/templates/index.html
+++ b/parking/templates/index.html
@@ -30,7 +30,7 @@
             <div class="col-md-6 col-sm-12 d-flex justify-content-center flex-column">
               <h1 class="text-white">Seu carro seguro, sua tranquilidade garantida!</h1>
               <p class="text-white fw-light">Mais que um estacionamento, uma experiência!</p>
-              <a href="{% url 'cadastro' %}" class="rounded"><button class="btn" style="color: #072e33; background-color: white;">Cadastrar</button></a>
+              <a href="{% url 'cadastro' %}" class="rounded"><button class="btn" style="color: #072e33; background-color: white;">Cadastre-se</button></a>
             </div>
 
             <div class="col-md-6 col-sm-12 mt-4">
