--- a/parking/templates/pages/perfil.html
+++ b/parking/templates/pages/perfil.html
@@ -4,31 +4,15 @@
 {% endblock %}
 {% block content %}
   {% load static %}
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-6 user">
-        <div class="d-flex flex-column p-3 rounded-3 shadow-sm" style="background-color: whitesmoke;">
-          <h3 class="pb-3">Perfil</h3>
-          <div class="d-flex gap-4">
-            <div class="">
-              <img src="{% static 'img/perfil.jpg' %}" class="rounded-circle" alt="" width="120px" height="120px" style="border: 3px solid #072e33;" />
-            </div>
-            <div class="pt-3">
-              {% if user.is_authenticated %}
-                <h4 class="fs-5">Nome: {{ user.first_name }} {{ user.last_name }}</h4>
-                <h4 class="fs-5">Email: {{ user.email }}</h4>
-                <h4 class="fs-5">Automóveis: 5</h4>
-              {% endif %}
+  <div class="card p-2" style="width: 18rem;">
+    <img src="{% static 'img/user.jpg' %}" class="card-img-top rounded-circle border" alt="..." style="width: 150px; height: 150px; object-fit: cover; margin: auto; display: block;">
+    <div class="card-body text-center">
+      <h5 class="card-title">{{ user.first_name }} {{ user.last_name }}</h5>
+      <p class="card-text">{{ user.email }}</p>
+      <a href="{% url 'veiculos' %}" class="btn" style="background-color: #CB3F48; border-color: #CB3F48; color: white;">Veículos</a>
+<a href="{% url 'vagas' %}" class="btn" style="background-color: #CB3F48; border-color: #CB3F48; color: white;">Vagas</a>
 
-              <div class="d-flex gap-2 mt-4 mb-4">
-                <a href="{% url 'vagas' %}"><button type="submit" class="btn p-2 text-white" style="width: 100%; background-color: #072e33;">Verificar vagas</button></a>
-
-                <a href="{% url 'veiculos' %}"><button type="submit" class="btn p-2 text-white" style="width: 100%; background-color: #072e33;">Veículos</button></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
+  
 {% endblock %}
