--- a/parking/templates/pages/home.html
+++ b/parking/templates/pages/home.html
@@ -3,8 +3,8 @@
   Home
 {% endblock %}
 {% block content %}
-  <div class="container d-flex align-items-center justify-content-center min-vh-100">
-    <div class="row w-75">
+  <div class="container d-flex align-items-center justify-content-center ">
+    <div class="row">
       <div class="col-12 user text-center p-5 rounded shadow bg-white">
         <div class="py-4">
           {% if user.is_authenticated %}
